# intelliprint-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/intelliprint_py/: __init__.py  client.py  exceptions.py
src/intelliprint_py/models/: __init__.py  address.py  enums.py  settings.py  user_data.py
src/intelliprint_py/services/: __init__.py  backgrounds.py  base.py  mailing_lists.py  prints.py
tests/: __init__.py  test_models.py
