[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intelliprint-py"
version = "0.1.0"
description = "Unofficial Python SDK for the Intelliprint API - Send physical mail as easily as sending email"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = 'Yevhenii Dits', email = 'yevheniidits@gmail.com' }
]
keywords = [
    "intelliprint",
    "mail",
    "postal",
    "letter",
    "postcard",
    "api",
    "sdk",
    "physical-mail",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/yevhenii/intelliprint-py"
Documentation = "https://docs.intelliprint.net"
Repository = "https://github.com/yevhenii/intelliprint-py"
Issues = "https://github.com/yevhenii/intelliprint-py/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/intelliprint_py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/intelliprint_py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
